# oberon

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
modules/: FindLibZip.cmake  FindMiniZip.cmake  FindPhysFS.cmake
package/archlinux/: PKGBUILD
src/: CMakeLists.txt
src/Oberon/: AbstractScript.h  CMakeLists.txt  GameData.h  Importer.cpp  Importer.h  Light.h  LightDrawable.cpp  LightDrawable.h  Mesh.h  MeshPrimitives.cpp  MeshPrimitives.h  MeshRenderer.cpp  MeshRenderer.h  Oberon.cpp  Oberon.h  PhongDrawable.cpp  PhongDrawable.h  SceneData.h  SceneImporter.cpp  SceneImporter.h  SceneShader.cpp  SceneShader.frag  SceneShader.h  SceneView.cpp  SceneView.h  Script.h  ScriptManager.cpp  ScriptManager.h  resources.conf
src/Oberon/Bindings/: CMakeLists.txt
src/Oberon/Bindings/Corrade/: CMakeLists.txt
src/Oberon/Bindings/Magnum/: CMakeLists.txt
src/Oberon/Bindings/Magnum/SceneGraph/: CMakeLists.txt
src/Oberon/Bindings/Oberon/: CMakeLists.txt  PyStdErrOutStreamRedirect.h  Python.h
src/Oberon/Bindings/python/: CMakeLists.txt
src/Oberon/Bindings/python/corrade/: CMakeLists.txt  bootstrap.h
src/Oberon/Bindings/python/magnum/: CMakeLists.txt
src/Oberon/Bindings/python/oberon/: CMakeLists.txt  bootstrap.h  oberon.cpp  scenegraph.cpp
src/Oberon/Core/: AbstractScript.h  CMakeLists.txt  Core.h  Entity.cpp  Entity.h  Entity.hpp  EntitySerializer.cpp  EntitySerializer.h  EntitySerializer.hpp  GameObject.cpp  GameObject.hpp  Importer.cpp  Importer.h  Light.h  Mesh.h  RectangleShape.cpp  RectangleShape.h  RectangleShape.hpp  SceneShader.cpp  SceneShader.h  Script.h  ScriptManager.cpp  ScriptManager.h  Serializer.cpp  Serializer.h  Shader.cpp  Shader.h  Sprite.h  resources.conf
src/Oberon/Core/Resources/: SceneShader.frag  SceneShader.vert  Shader.frag  Shader.vert
src/Oberon/Editor/: AbstractPanel.h  CMakeLists.txt  CodePanel.cpp  CodePanel.h  CodePanel.hpp  CollectionPanel.cpp  CollectionPanel.h  CollectionPanel.hpp  Console.cpp  Console.h  Console.hpp  Editor.cpp  Editor.h  Editor.hpp  EditorApplication.cpp  EditorApplication.h  EditorWindow.cpp  EditorWindow.h  EditorWindow.ui  EntityNode.h  Explorer.cpp  Explorer.h  Explorer.hpp  Export.cpp  Export.h  FileBrowser.cpp  FileBrowser.h  FileNode.h  Hierarchy.cpp  Hierarchy.h  Hierarchy.hpp  Im3d.frag  Im3d.geom  Im3d.vert  Im3dContext.cpp  Im3dContext.h  Im3dIntegration.h  Inspector.cpp  Inspector.h  Inspector.hpp  (+29 more)
src/Oberon/Editor/Resources/: MacOSXBundleInfo.plist.in
src/Oberon/ExportTemplate/: AbstractApplication.cpp  AbstractApplication.h  Application.cpp  Application.h  CMakeLists.txt  PackingUtility.cpp  PackingUtility.h  Sdl2Application.cpp  Sdl2Application.h
src/Oberon/Templates/: CMakeLists.txt  GlfwTemplate.cpp  GlfwTemplate.h
src/OberonExternal/: CMakeLists.txt
src/OberonExternal/im3d/: CMakeLists.txt
